--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^2.1.8",
     "tailwind-merge": "^3.2.0",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
